# PROD26-T-match

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  README_ML.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  seed.py  test_db_conn.py
admin-frontend/: Dockerfile  app.js  index.html  nginx.conf  styles.css
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_city_to_users.py  0002_ml_profiles.py  0003_add_match_views.py  0003_merge_heads.py  0004_merge_all_heads.py  0005_add_admin_report.py
app/: anti_abuse.py  audit.py  main.py  metrics.py  ml_main.py  security.py
app/api/: filters.py  router.py
app/db/: config.py  database.py
app/model/: baseline.py  ml_profile.py  test_baseline.py
app/models/: __init__.py  audit_log.py  block.py  (+8 more)
models/: .gitignore  kmeans.pkl.dvc  pca.pkl.dvc  scaler.pkl.dvc  vocab.pkl
notebooks/: eda.ipynb  make_eda_sample.py
observability/: loki-config.yml  prometheus.yml  promtail-config.yml
postman/: t-match.postman_collection.json  t-match.postman_environment.json
scripts/: build_features.py  categories.txt  categories_safe.txt  inspect_lookalike.py  prepare_features.py  seed_clusters.py  seed_ml_profiles.py  train_pca_kmeans.py  upload_features_to_db.py
tests/: test_admin.py  test_audit_log.py  test_blocks.py  test_conversations.py  test_conversations_integration.py  test_interactions.py  test_matches.py  test_rank.py  test_rank_integration.py  test_recommendations.py  test_reports.py  test_user_photos.py  test_users.py  test_users_integration.py
(+22 files in other folders)
