[tool.poetry]
name = "t-match"
version = "0.1.0"
description = "Backend services for t-match"
authors = ["Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.110.0"
uvicorn = { version = "^0.27.1", extras = ["standard"] }
sqlalchemy = "^2.0.27"
greenlet = "^3.0.3"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
scikit-learn = ">=1.3.0"
redis = ">=4.2.0"
httpx = ">=0.27.0"
prometheus-client = "^0.20.0"
mlflow = ">=2.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
black = "^24.4.2"
mypy = "^1.10.0"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: integration tests that require a running API",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false
exclude = "^(alembic|scripts)/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
